@@ -1,52 +1,0 @@
-<configure
-  xmlns="http://namespaces.zope.org/zope"
-  xmlns:browser="http://namespaces.zope.org/browser"
-  xmlns:zcml="http://namespaces.zope.org/zcml"
-  zcml:condition="installed zc.selenium">
-
-  <include package="zc.selenium" />
-
-  <adapter
-    factory=".selenium.SeleniumBasicTests"
-    name="zeit.imp.browser.BasicTests"
-    permission="zope.Public"
-    />
-
-  <adapter
-    factory=".selenium.SeleniumCropTests"
-    name="zeit.imp.browser.CropTests"
-    permission="zope.Public"
-    />
-
-  <adapter
-    factory=".selenium.SeleniumMaskTests"
-    name="zeit.imp.browser.MaskTests"
-    permission="zope.Public"
-    />
-
-  <adapter
-    factory=".selenium.ResizeTests"
-    name="zeit.imp.browser.ResizeTests"
-    permission="zope.Public"
-    />
-
-  <adapter
-    factory=".selenium.FilterTests"
-    name="zeit.imp.browser.FilterTests"
-    permission="zope.Public"
-    />
-
-  <adapter
-    factory=".selenium.ContentZoomTest"
-    name="zeit.imp.browser.ContentZoomTest"
-    permission="zope.Public"
-    />
-
-  <browser:page
-    for="zope.location.interfaces.ISite"
-    name="create-image-group"
-    class=".selenium.CreateImageGroup"
-    permission="zope.Public"
-    />
-
-</configure>
